--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   </head>
   <body>
     <section class="page-header">
-      <h1 class="project-name">Shenran.GitHub.io</h1>
-      <h2 class="project-tagline">小小堂</h2>
+      <h1 class="project-name">小小堂</h1>
+      <h2 class="project-tagline">堂主</h2>
     </section>
 
     <section class="main-content">
